--- a/project1/myprofile/myprofile.css
+++ b/project1/myprofile/myprofile.css
@@ -46,6 +46,12 @@ body {
   padding-top: 10px;
 }
 
+.profile-subheading {
+  text-align: center;
+  font-size: 22px;
+  line-height: 18px;
+}
+
 .empty-card {
   width:25%;
   /*content: 'Empty';*/
@@ -58,11 +64,13 @@ body {
   padding: 10px;
   text-align: center;
   vertical-align: middle;
+  margin-top: 10px;
 }
 
 .class-list-title {
   text-align: center;
   font-size: 20px;
+  padding-top: 15px;
 }
 
 footer {
