--- a/project1/messagepage/style.css
+++ b/project1/messagepage/style.css
@@ -3,27 +3,27 @@
     padding: 0;
     font-family: sans-serif;
     box-sizing: border-box;
-    
+
 }
 
 
 body {
-    
-background: #fafafa;
+
+    background: #fafafa;
 }
 
 
 .chatbox .chatting {
-    
-font-size: 20px; 
-text-align: center;
-vertical-align: middle;
-line-height: 90px; 
+
+    font-size: 20px; 
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px; 
     padding: 20px; 
 }
 
 
-  
+
 .chatbox {
     background: #fff; 
     padding: 100px;
@@ -32,7 +32,7 @@ line-height: 90px;
 }
 
 .chatlogs {
-  
+
     padding: 10px;
     width: 100%;
     height: 450px;
@@ -40,7 +40,7 @@ line-height: 90px;
 }
 
 .chat {
-     
+
     display: flex;
     flex-flow: row wrap;
     align-items: flex-start;
@@ -52,14 +52,12 @@ line-height: 90px;
     height: 60px;
     background: #ccc;
     border-radius: 50%;
-   
+
 }
 
 h6 {
     text-align: center;
 }
-
-
 
 .chat .chat-message {
     align-content: center;
@@ -77,8 +75,8 @@ h6 {
 }
 
 .self .chat-message {
-   align-items: center; 
-   background: gray;
+    align-items: center; 
+    background: gray;
     order: -1; 
     align-items: center;
 }
@@ -99,49 +97,50 @@ h6 {
     font-size: 18px;
     color: #999; 
     margin: auto; 
-    border-radius: 3px; 
-    
+    border-radius: 3px;
+
 }
 
 .chat-form textarea: focus {
-background: #ffff; 
+    background: #fff;
 
 }
 
-
 .chat-form button {
-height: 50px;    
-padding: 5px 15px;
-margin: auto; 
-border-radius: 3px; 
-box-shadow: 0 3px 0 lightblue; 
-cursor: pointer; 
+    height: 50px;    
+    padding: 5px 15px;
+    margin: auto; 
+    border-radius: 3px; 
+    box-shadow: 0 3px 0 lightblue; 
+    cursor: pointer;
 
 }
 
 .span2 h4 {
-background: grey;
-color: white; 
+    background: grey;
+    color: white; 
 }
 
 .span2 h5 {
-text-align: left;
-padding: 10px 40px; 
+    text-align: left;
+    padding: 10px 40px; 
 }
 
 .span2 p {
-text-align: left; 
-padding: 0px 40px; 
+    text-align: left; 
+    padding: 0px 40px; 
 }
 
 .second {
     padding: 50px 0px; 
 }
 
-.chat self .userphoto {
-    overflow: hidden; 
+.chat .self .userphoto {
     width: 100%; 
 }
 
-
+img {
+max-width:100%;
+max-height:100%;
+}
 
