complete directory overhaul...but things work :)

--- a/project1/views/classpage.html
+++ b/project1/views/classpage.html
@@ -13,7 +13,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles -->
-    <link href="classpage.css" rel="stylesheet">
+    <link href="../css/classpage.css" rel="stylesheet">
   </head>
 
   <body>
