--- a/project1/views/home.html
+++ b/project1/views/home.html
@@ -14,7 +14,7 @@
   <link href="../css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles -->
-  <link href="home.css" rel="stylesheet">
+  <link href="../css/home.css" rel="stylesheet">
 </head>
 
 <body>
