--- a/project1/views/messeges.html
+++ b/project1/views/messeges.html
@@ -3,9 +3,10 @@
 <head>
     <title>Messages</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../favicon.ico">
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href ="style.css" rel= stylesheet>
+    <link href ="../css/style.css" rel= stylesheet>
 
 </head>
 <body>
@@ -19,12 +20,12 @@
     <div class="col-md-2">
         <h4> Messages</h4>
         <div class="first">
-            <img src="jagath.jpg" class="img-circle">
+            <img src="../img/jagath.jpg" class="img-circle">
             <h5>Jagath Jai Kumar</h5>
             <p>Hey man how are you? </p>
         </div>
         <div class="second">
-            <img src="jeremy.jpg" class="img-circle">
+            <img src="../img/jeremy.jpg" class="img-circle">
             <h5>Jeremy Kelleher</h5>
             <p>Hey man how are you? </p>
         </div>
@@ -34,11 +35,11 @@
         <div class="chatbox">
             <div class="chatlogs">
                 <div class="chat friend">
-                    <div class = "user-photo"><img src= "sagar.jpg" class="img-circle"></div>
+                    <div class = "user-photo"><img src= "../img/sagar.jpg" class="img-circle"></div>
                     <p class ="chat-message">What's up?</p>
                 </div>
                 <div class="chat self">
-                    <div class = "user-photo"><img src= "jagath.jpg" class="img-circle"></div>
+                    <div class = "user-photo"><img src= "../img/jagath.jpg" class="img-circle"></div>
                     <p class ="chat-message">Hey man how are you?</p>
                 </div>
             </div>
