--- a/project1/views/prof.html
+++ b/project1/views/prof.html
@@ -24,7 +24,7 @@ img.profile-image {
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles -->
-    <link href="classpage.css" rel="stylesheet">
+    <link href="../css/classpage.css" rel="stylesheet">
   </head>
 
   <body>
