--- a/project1/views/myprofile.html
+++ b/project1/views/myprofile.html
@@ -13,7 +13,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles -->
-    <link href="myprofile.css" rel="stylesheet">
+    <link href="../css/myprofile.css" rel="stylesheet">
   </head>
 
   <body>
