added adams mini commit

--- a/project1/views/home.html
+++ b/project1/views/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<tml lang="en">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -21,60 +21,59 @@
   <div class="navbar navbar-inverse bg-inverse">
     <div class="container d-flex justify-content-between">
       <a href="#" class="navbar-brand">Home</a>
+      <a href="profile.html" class="navbar-brand">Your Profile</a>
+      <a href="messages.html" class="navbar-brand">Messages</a>
     </div>
   </div>
   <div class="col-md-3">
-    <div class="navbar navbar-default navbar-fixed-side">
-      <div class="row no-margin">
-        <form class="navbar-search">
-          <input type="text" class="search-query full" placeholder="Add Classes">
-        </form>
-      </div>
-      <div class="row">
-        <div class="panel-group">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <a data-toggle="collapse" href="#current_class_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample" class="panel-title">
-                <p class="panel-title">
-                  Current Classes
-                </p>
-              </a>
-            </div>
-            <div id="current_class_dropdown" class="collapse in">
-              <ul class="list-group">
-                <li class="list-group-item"><button class="btn class_btn">CS 187</button></li>
-                <li class="list-group-item"><button class="btn class_btn">MA 132</button></li>
-                <li class="list-group-item"><button class="btn class_btn">PH 152</button></li>
-                <li class="list-group-item"><button class="btn class_btn">CH 112</button></li>
-                <li class="list-group-item"><button class="btn class_btn">AR 101</button></li>
-              </ul>
-            </div>
+    <div class="row no-margin">
+      <form class="navbar-search">
+        <input type="text" class="search-query full" placeholder="Add Classes">
+      </form>
+    </div>
+    <div class="row">
+      <div class="panel-group">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <a data-toggle="collapse" href="#current_class_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample" class="panel-title">
+              <p class="panel-title">
+                Current Classes
+              </p>
+            </a>
+          </div>
+          <div id="current_class_dropdown" class="collapse in">
+            <ul class="list-group">
+              <li class="list-group-item"><button class="btn class_btn">CS 187</button></li>
+              <li class="list-group-item"><button class="btn class_btn">MA 132</button></li>
+              <li class="list-group-item"><button class="btn class_btn">PH 152</button></li>
+              <li class="list-group-item"><button class="btn class_btn">CH 112</button></li>
+              <li class="list-group-item"><button class="btn class_btn">AR 101</button></li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="panel-group">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <a data-toggle="collapse" href="#past_class_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample" class="panel-title">
-                <p class="panel-title">
-                  Previous Classes
-                </p>
-              </a>
-            </div>
-            <div id="past_class_dropdown" class="collapse in">
-              <ul class="list-group">
-                <li class="list-group-item"><button class="btn class_btn">CS 121</button></li>
-                <li class="list-group-item"><button class="btn class_btn">MA 131</button></li>
-                <li class="list-group-item"><button class="btn class_btn">PH 151</button></li>
-                <li class="list-group-item"><button class="btn class_btn">CH 111</button></li>
-                <li class="list-group-item"><button class="btn class_btn">CW 100</button></li>
-              </ul>
-            </div>
+    </div>
+    <div class="row">
+      <div class="panel-group">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <a data-toggle="collapse" href="#past_class_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample" class="panel-title">
+              <p class="panel-title">
+                Previous Classes
+              </p>
+            </a>
+          </div>
+          <div id="past_class_dropdown" class="collapse in">
+            <ul class="list-group">
+              <li class="list-group-item"><button class="btn class_btn">CS 121</button></li>
+              <li class="list-group-item"><button class="btn class_btn">MA 131</button></li>
+              <li class="list-group-item"><button class="btn class_btn">PH 151</button></li>
+              <li class="list-group-item"><button class="btn class_btn">CH 111</button></li>
+              <li class="list-group-item"><button class="btn class_btn">CW 100</button></li>
+            </ul>
           </div>
         </div>
       </div>
-
     </div>
   </div>
   <div class="col-md-6">
@@ -140,10 +139,8 @@
       </div>
     </div>
   </div>
-</div>
 
-<div class="col-md-3">
-  <div class="navbar navbar-default navbar-fixed-side">
+  <div class="col-md-3">
     <div class="row no-margin">
       <form class="navbar-search">
         <input type="text" class="search-query full" placeholder="Search Contacts">
@@ -188,7 +185,6 @@
         </div>
       </div>
     </div>
-
   </div>
   <footer class="text-muted">
     <div class="container">
@@ -197,7 +193,7 @@
   </footer>
 
 
-  <!-- Bootstrap core JavaScript
+    <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
