added classpage template

--- a/WIP/Tibl/templates/classpage.html
+++ b/WIP/Tibl/templates/classpage.html
@@ -5,4 +5,13 @@
 
   <p>Welcome to <em>Tibl</em></p>
 
+  <h2>Dynamic content</h2>
+
+  <p>The class has the following:</p>
+  <ul>
+    <li><strong>Name:</strong> {{ name }}</li>
+    <li><strong>Number:</strong> {{ number }}</li>
+  </ul>
+
+
 {% endblock %}
