--- a/WIP/Tibl/templates/classpage.html
+++ b/WIP/Tibl/templates/classpage.html
@@ -9,9 +9,11 @@
 
   <p>The class has the following:</p>
   <ul>
-    <li><strong>Name:</strong> {{ name }}</li>
-    <li><strong>Number:</strong> {{ number }}</li>
+    <li><strong>Name:</strong> {{ classnum }}</li>
   </ul>
 
+  {% for student in students %}
+    {{ student.full_name }}  {{ student.grad_year }} <br>
+  {% endfor %}
 
 {% endblock %}
