--- a/WIP/Tibl/templates/base_generic.html
+++ b/WIP/Tibl/templates/base_generic.html
@@ -22,7 +22,7 @@
       <div class="col-sm-2">
       {% block sidebar %}
       <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="">Classes</a></li>
           <li><a href="">Friends</a></li>
       </ul>
