--- a/WIP/Tibl/templates/classpage.html
+++ b/WIP/Tibl/templates/classpage.html
@@ -1,6 +1,64 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
+  <body>
+
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 class="jumbotron-heading">CS 326</h1>
+        <p>Instructor: <a href="#">Tim Richards</a></p> 
+        <p>
+          <a href="#" class="btn btn-primary">Go to message feed</a>
+        </p>
+      </div>
+    </section>
+
+    <div class="album text-muted">
+      <div class="container">
+        <div class="row">
+          <div class="card">
+            <img src="../img/pic1.jpeg" alt="pic1">
+            <p class="card-text">Bobby J</p>
+          </div>
+          <div class="card">
+            <img src="../img/pic2.jpeg" alt="Card image cap">
+            <p class="card-text">Daniel Tyson</p>
+          </div>
+          <div class="card">
+            <img src="../img/pic3.jpeg" alt="Card image cap">
+            <p class="card-text">John Septen</p>
+          </div>
+          <div class="card">
+            <img src="../img/pic4.jpeg" alt="Card image cap">
+            <p class="card-text">Wally O.</p>
+          </div>
+          <div class="card">
+            <img src="../img/pic5.jpeg" alt="Card image cap">
+            <p class="card-text">Lynn Jenner</p>
+          </div>
+          <div class="card">
+            <img src="../img/pic6.jpeg" alt="Card image cap">
+            <p class="card-text">Casey Wako</p>
+          </div>
+          <div class="card">
+            <img src="../img/pic7.jpeg" alt="Card image cap">
+            <p class="card-text">Geoff Sesh</p>
+          </div>
+          <div class="card">
+            <img src="../img/pic10.jpeg" alt="Card image cap">
+            <p class="card-text">Danni T.</p>
+          </div>
+          <div class="card">
+            <img src="../img/pic9.jpeg" alt="Card image cap">
+            <p class="card-text">Orrin H.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+{% endblock %} 
+<!--
 <h1>Tibl Home</h1>
 
   <p>Welcome to <em>Tibl</em></p>
@@ -15,5 +73,4 @@
   {% for student in students %}
     {{ student.full_name }}  {{ student.grad_year }} <br>
   {% endfor %}
-
-{% endblock %}
+-->
