--- a/WIP/Tibl/templates/index.html
+++ b/WIP/Tibl/templates/index.html
@@ -7,7 +7,7 @@
 	    <h1>Your Courses</h1>
 	    {% if section_list %}
 	    <ul>
-
+	    	<p>current classes</p>
 	      {% for section in section_list %}
 	      <li>
 	        <a href='#'>{{ section }} {{ section.course }}</a>
@@ -18,7 +18,7 @@
 		{% endif %} 
 
 	    {% if past_course_list %}
-
+	    <p>past classes</p>
 	    <ul>
 	      {% for course in past_course_list %}
 	      <li>
