--- a/WIP/Tibl/templates/myprofile.html
+++ b/WIP/Tibl/templates/myprofile.html
@@ -1,8 +1,73 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h1>Tibl Home</h1>
+	<div class="navbar navbar-inverse bg-inverse">
+      <div class="container d-flex justify-content-between">
+        <a href="#" class="navbar-brand">Home</a>
+      </div>
+    </div>
 
-  <p>Welcome to <em>Tibl</em></p>
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 class="jumbotron-heading">{{ student.full_name }}</h1>
+        <p class="lead text-muted">View and edit your profile</p>
+      </div>
+    </section>
+
+    <div class="album text-muted">
+      <div class="container">
+      	{% load static %}
+        <img class="profile-image" src="{% static student.profile_picture.url %}" alt="pic1" height="60" width="60">
+        <p class="profile-title"> {{ student.full_name }} </p>
+        <p class="profile-subheading">{{ student.grad_year }}</p>
+        <div class="row">
+
+          <div class="col-md-2 col-sm-offset-3">
+            <!-- <div class="empty-card"></div>
+            <div class="empty-card"></div>
+            <div class="empty-card"></div>
+            <div class="empty-card"></div> -->
+            <p class="class-list-title">{{ student.full_name }}'s Current Classes</p>
+
+            {% for section in sections %}
+            	{% if section.season == "Sp" %}
+	            	<div class="class-card">
+	              		<p class="card-text">{{ section.course.number }} - {{ section.course.name }}</p>
+	            	</div>
+	            {% endif %}
+			{% endfor %}
+
+          </div>
+
+          <div class="col-md-2 col-sm-offset-2">
+            <p class="class-list-title">{{ student.full_name }}'s Previous Classes</p>
+            
+            {% for section in sections %}
+            	{% if section.season != "Sp" %}
+	            	<div class="class-card">
+	              		<p class="card-text">{{ section.course.number }} - {{ section.course.name }}</p>
+	            	</div>
+	            {% endif %}
+			{% endfor %}
+
+          </div> 
+
+        </div>
+
+      </div>
+    </div>
+
+    <footer class="text-muted">
+      <div class="container">
+        <p>WIP: Work-in-Progress</p>
+        </div>
+    </footer>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script>
+      $(function () {
+        Holder.addTheme("thumb", { background: "#55595c", foreground: "#eceeef", text: "Thumbnail" });
+      });
+    </script>
 
 {% endblock %}
