--- a/WIP/Tibl/templates/classpage.html
+++ b/WIP/Tibl/templates/classpage.html
@@ -24,7 +24,7 @@
           {% for student in students %}
           <div class="card">
               <img src="{% static student.profile_picture.url  %}" alt="pic1">
-            <p class="card-text">{{ student.full_name }}  {{ student.grad_year }}</p>
+            <p class="card-text">{{ student.full_name }}, Class of {{ student.grad_year }}</p>
           </div>
           {% endfor %}
         </div>
