--- a/WIP/Tibl/templates/base_generic.html
+++ b/WIP/Tibl/templates/base_generic.html
@@ -21,7 +21,7 @@
   <div class="navbar navbar-inverse bg-inverse">
     <div class="container d-flex justify-content-between">
       <a href="/" class="navbar-brand">Home</a>
-      <a href="/myprofile/1" class="navbar-brand">Your Profile</a>
+      <a href="{% url 'myprofile' 1%}" class="navbar-brand">Your Profile</a>
       <a href="/messages" class="navbar-brand">Messages</a>
     </div>
   </div>
