--- a/WIP/Tibl/templates/classpage.html
+++ b/WIP/Tibl/templates/classpage.html
@@ -25,6 +25,7 @@
           <div class="card">
               <img src="{% static student.profile_picture.url  %}" alt="pic1">
             <p class="card-text">{{ student.full_name }}, Class of {{ student.grad_year }}</p>
+            <a href="{% url 'friendprofile' student.id %}">My page</a>
           </div>
           {% endfor %}
         </div>
