--- a/WIP/Tibl/templates/classpage.html
+++ b/WIP/Tibl/templates/classpage.html
@@ -24,8 +24,8 @@
           {% for student in students %}
           <div class="card">
               <img src="{% static student.profile_picture.url  %}" alt="pic1">
-            <p class="card-text">{{ student.full_name }}, Class of {{ student.grad_year }}</p>
-            <a href="{% url 'friendprofile' student.id %}">My page</a>
+            <p class="card-text"><a href="{% url 'friendprofile' student.id %}">{{ student.full_name }}</a>, Class of {{ student.grad_year }}</p>
+            
           </div>
           {% endfor %}
         </div>
