--- a/WIP/Tibl/templates/messaging.html
+++ b/WIP/Tibl/templates/messaging.html
@@ -1,8 +1,39 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h1>Tibl Home</h1>
-
-  <p>Welcome to <em>Tibl</em></p>
+<script src="http://code.jquery.com/jquery.js"></script>
+    <script src="../js/vendor/bootstrap.min.js"></script>
+    <div class="navbar navbar-inverse bg-inverse">
+   		<div class="container d-flex justify-content-between">
+     		<a href="#" class="navbar-brand">Home</a>
+   		</div>
+ 	</div>
+    <div class="col-md-2">
+    	{% for message in messages %}
+        <h4> Messages</h4>
+        <div class="first">
+            <img src="../img/jagath.jpg" class="img-circle">
+            <h5>{{message.sender}}</h5>
+            <p>{{message.content}}</p>
+        </div>
+       { % endfor %}
+    </div>
+       {% for message in messages %}
+    <div class="col-md-10">
+        <h6> You are now chatting with {{message.sender}}</h6>
+        <div class="chatbox">
+            <div class="chatlogs">
+                <div class="chat friend">
+                    <div class = "user-photo"><img src= "../img/sagar.jpg" class="img-circle"></div>
+                    <p class ="chat-message">{{message.content}}</p>
+                </div>
+            </div>
+            <div class="chat-form">
+                <textarea></textarea>
+                <button>Send</button>
+            </div>
+        </div>
+    </div>
+       {% endfor %)
 
 {% endblock %}
