--- a/WIP/Tibl/templates/messaging.html
+++ b/WIP/Tibl/templates/messaging.html
@@ -1,6 +1,7 @@
 {% extends "base_generic.html" %}
 {% load static %}
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/messaging.css' %}">
     <div class="col-md-2">
     	{% for message in messages %}
         <h4> Messages</h4>
