--- a/WIP/Tibl/templates/base_generic.html
+++ b/WIP/Tibl/templates/base_generic.html
@@ -12,9 +12,6 @@
 
   <!-- Bootstrap core -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-  <!-- Custom styles 
-  <link href="../css/home.css" rel="stylesheet">-->
 </head>
 
 <body>
@@ -28,30 +25,30 @@
   {% block content %}
 
   {% endblock %}
-  <footer class="text-muted">
+  <footer class="text-muted col-md-12">
     <div class="container">
       <p>WIP: Work-in-Progress</p>
     </div>
   </footer>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-    crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.2"><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-    crossorigin="anonymous"></script>
-    <script src="../js/vendor/holder.min.js"></script>
-    <script>
-      $(function () {
-        Holder.addTheme("thumb", { background: "#55595c", foreground: "#eceeef", text: "Thumbnail" });
-      });
-    </script>
-    <script src="../js/vendor/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!-- <script src="../js/ie10-viewport-bug-workaround.js"></script> -->
-  </body>
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+  crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="\{\% static \'js/vendor/jquery-1.11.2.js\' \%\}"><\/script>')</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+  crossorigin="anonymous"></script>
+  <script src="{% static 'js/vendor/holder.min.js' %}"></script>
+  <script>
+    $(function () {
+      Holder.addTheme("thumb", { background: "#55595c", foreground: "#eceeef", text: "Thumbnail" });
+    });
+  </script>
+  <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <!-- <script src="../js/ie10-viewport-bug-workaround.js"></script> -->
+</body>
 
-  </html>
+</html>
