--- a/WIP/Tibl/templates/index.html
+++ b/WIP/Tibl/templates/index.html
@@ -70,7 +70,7 @@
 				<select class="form-control" id="class_select">
 					{% if section_list %}
 					{% for section in section_list %}
-					<option> {{ section.course.department }} {{ section.course.number }}</option>
+					<option>{{ section.course.department }} {{ section.course.number }}</option>
 					{% endfor %}
 					{% else %}
 					<option>Add some classes before you post!</option>
@@ -84,13 +84,19 @@
 	{% for post in posts %}
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">{{ post.poster.full_name }}</h3>
+			<h3 class="panel-title">
+				<a href="{% url 'friendprofile' post.poster.pk %}">
+					{{ post.poster.full_name }}
+				</a>
+			</h3>
 		</div>
 		<div class="panel-body">
 			{{ post.content }}
 		</div>
 		<div class="panel-footer">
-			{{ post.section.course.department }} {{ post.section.course.number }}
+			<a href="{% url 'class' post.section.pk %}">
+				{{ post.section.course.department }} {{ post.section.course.number }}
+			</a>
 		</div>
 	</div>
 	{% endfor %}
@@ -114,7 +120,7 @@
 				<div id="recent_contacts_dropdown" class="collapse in">
 					<ul class="list-group">
 						{% for message in have_messaged %}
-						<a href="{% url 'messages' message.pk %}">
+						<a href="{% url 'messages' cur_user %}">
 							<li class="list-group-item">
 								{{ message.full_name }}
 							</li>
