--- a/WIP/Tibl/templates/base_generic.html
+++ b/WIP/Tibl/templates/base_generic.html
@@ -20,6 +20,12 @@
       <a href="/" class="navbar-brand">Home</a>
       <a href="{% url 'myprofile' 1%}" class="navbar-brand">Your Profile</a>
       <a href="{% url 'messages' 1%}" class="navbar-brand">Messages</a>
+      {% if user.is_authenticated %}
+      <a href="#" class="navbar-brand">User: {{ user.get_username }}</a>
+     <a href="{% url 'logout'%}?next={{request.path}}" class="navbar-brand">Logout</a>
+   {% else %}
+     <a href="{% url 'login'%}?next={{request.path}}" class="navbar-brand">Login</a>  
+   {% endif %} 
     </div>
   </div>
   {% block content %}
