--- a/WIP/templates/registration/login.html
+++ b/WIP/templates/registration/login.html
@@ -1,4 +1,6 @@
 {% extends "base_generic.html" %}
+{% load static %}
+
 
 {% block content %}
 
@@ -14,7 +16,7 @@
     <p>Please login to see this page.</p>
     {% endif %}
 {% endif %}
-
+<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
 
@@ -28,7 +30,7 @@
 </div>
 
 <div>
-  <input type="submit" value="login" />
+  <input class="btn btn-info" type="submit" value="login" />
   <input type="hidden" name="next" value="{{ next }}" />
 </div>
 </form>
