--- a/WIP/Tibl/templates/base_generic.html
+++ b/WIP/Tibl/templates/base_generic.html
@@ -18,8 +18,8 @@
   <div class="navbar navbar-inverse bg-inverse">
     <div class="container d-flex justify-content-between">
       <a href="/" class="navbar-brand">Home</a>
-      <a href="{% url 'myprofile' 1%}" class="navbar-brand">Your Profile</a>
-      <a href="{% url 'messages' 1%}" class="navbar-brand">Messages</a>
+      <a href="{% url 'myprofile'%}" class="navbar-brand">Your Profile</a>
+      <a href="{% url 'messages'%}" class="navbar-brand">Messages</a>
       {% if user.is_authenticated %}
       <a href="#" class="navbar-brand">User: {{ user.get_username }}</a>
      <a href="{% url 'logout'%}?next={{request.path}}" class="navbar-brand">Logout</a>
