--- a/WIP/Tibl/templates/index.html
+++ b/WIP/Tibl/templates/index.html
@@ -41,7 +41,7 @@
 				<div class="panel-heading">
 					<a data-toggle="collapse" href="#past_class_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample" class="panel-title">
 						<p class="panel-title">
-							Current Classes
+							Past Classes
 						</p>
 					</a>
 				</div>
@@ -123,7 +123,7 @@
 				<div id="recent_contacts_dropdown" class="collapse in">
 					<ul class="list-group">
 						{% for message in have_messaged %}
-						<a href="{% url 'messages' cur_user %}">
+						<a href="{% url 'messages' %}">
 							<li class="list-group-item">
 								{{ message.full_name }}
 							</li>
