filter down messages to be logged-in user specific, and slightly fix the template

--- a/WIP/Tibl/templates/messaging.html
+++ b/WIP/Tibl/templates/messaging.html
@@ -18,7 +18,7 @@
         <div class="chatbox">
             <div class="chatlogs">
                 <div class="chat friend">
-                    <div class = "user-photo"><img src= "{% static message.receiver.profile_picture.url  %}" class="img-circle"></div>
+                    <div class = "user-photo"><img src= "{% static message.sender.profile_picture.url  %}" class="img-circle"></div>
                     <p class ="chat-message">{{message.content}}</p>
                 </div>
             </div>
