--- a/WIP/templates/registration/login.html
+++ b/WIP/templates/registration/login.html
@@ -38,4 +38,7 @@
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
+<p><a href="{% url 'register' %}">New user? Register here!</a></p>
+
+
 {% endblock %}
